--- a/purchaseHistory.html
+++ b/purchaseHistory.html
@@ -345,6 +345,62 @@
                       <td>Cash On Delivery</td>
                       <td><button class="btn btn-danger">Delete</button></td>
                     </tr>
+                    <tr>
+                      <td>2</td>
+                      <td>27</td>
+                      <td>01944667441</td>
+                      <td>X2DY435</td>
+                      <td>A37M</td>
+                      <td>Red</td>
+                      <td>XXL</td>
+                      <td>4</td>
+                      <td>1000 Tk</td>
+                      <td>12-2-2025</td>
+                      <td>bKash</td>
+                      <td><button class="btn btn-danger">Delete</button></td>
+                    </tr>
+                    <tr>
+                      <td>3</td>
+                      <td>27</td>
+                      <td>01944667441</td>
+                      <td>X2DY435</td>
+                      <td>A37M</td>
+                      <td>Red</td>
+                      <td>XXL</td>
+                      <td>4</td>
+                      <td>1000 Tk</td>
+                      <td>12-2-2025</td>
+                      <td>Nagad</td>
+                      <td><button class="btn btn-danger">Delete</button></td>
+                    </tr>
+                    <tr>
+                      <td>4</td>
+                      <td>27</td>
+                      <td>01944667441</td>
+                      <td>X2DY435</td>
+                      <td>A37M</td>
+                      <td>Red</td>
+                      <td>XXL</td>
+                      <td>4</td>
+                      <td>1000 Tk</td>
+                      <td>12-2-2025</td>
+                      <td>Upay</td>
+                      <td><button class="btn btn-danger">Delete</button></td>
+                    </tr>
+                    <tr>
+                      <td>5</td>
+                      <td>27</td>
+                      <td>01944667441</td>
+                      <td>X2DY435</td>
+                      <td>A37M</td>
+                      <td>Red</td>
+                      <td>XXL</td>
+                      <td>4</td>
+                      <td>1000 Tk</td>
+                      <td>12-2-2025</td>
+                      <td>Rocket</td>
+                      <td><button class="btn btn-danger">Delete</button></td>
+                    </tr>
                 </tbody>
                </table>
               </div>
