--- a/index.html
+++ b/index.html
@@ -151,10 +151,20 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="viewOrders.html">
+              <a class="nav-link" data-bs-toggle="collapse" href="#order" aria-expanded="false" aria-controls="order">
                 <span class="menu-title">View Orders</span>
-                <i class="mdi mdi-order-bool-ascending menu-icon"></i>
+                <i class="mdi mdi-format-list-bulleted menu-icon"></i>
               </a>
+              <div class="collapse" id="order">
+                <ul class="nav flex-column sub-menu">
+                  <li class="nav-item">
+                    <a class="nav-link" href="pendingOrders.html">Pending Orders</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="viewOrders.html">Active Orders</a>
+                  </li>
+                </ul>
+              </div>
             </li>
 
             <li class="nav-item">
